--- a/src/components/CardAbout.astro
+++ b/src/components/CardAbout.astro
@@ -3,16 +3,15 @@ import Title from './TitleSection.astro'
 const { description, totalYears, nationality, iLiveIn } = Astro.props
 ---
 
-<section id="sobre-mi" class="px-6 py-6 flex flex-col items-center w-full max-w-screen-lg mx-auto">
+<section id="sobre-mi" class="px-6 py-6 flex flex-col items-center scroll-m-20 w-full mx-auto container lg:max-w-5xl md:max-w-2xl">
     <Title>Sobre mí</Title>
-    <div class="bg-white shadow-md rounded-2xl p-8 text-center w-full  transition-transform hover:scale-95 hover:shadow-lg duration-1000">
-      <div class="border-b border-gray-300 mb-4 pb-4">
-        <p class="mb-2"> Soy de <span class="text-primary"> {nationality} 🇨🇴</span> </p>
-        <p class="mb-2"> Vivo en <span class="text-primary"> {iLiveIn} 🇪🇸 </span></p>
-        <p> Más de <span class="text-primary"> {totalYears} años </span> de experiencia en la industria <span class="text-primary">tecnológica</span> </p>
-      </div>
-      <div>
-        <p>{description}</p>
-      </div>
-    </div>
-  </section>
+    <article class="flex flex-col items-center justify-center gap-8 text-gray-700 md:flex-row">
+      <div class="bg-white shadow-md rounded-2xl p-8 text-center text-pretty md:text-left w-full max-w-5xl  hover:scale-95 hover:shadow-xl duration-700">
+          <p class="mb-2"> Soy de <span class="text-primary"> {nationality} 🇨🇴</span> </p>
+          <p class="mb-2"> Vivo en <span class="text-primary"> {iLiveIn} 🇪🇸 </span></p>
+          <p> Más de <span class="text-primary"> {totalYears} años </span> de experiencia en la industria <span class="text-primary">tecnológica</span> </p>
+          <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
+          <p>{description}</p>
+      </div> <img width="200" height="200" src="/me.webp" alt="Ronaldo Jiménez" class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-sky-600/10 ring-1 ring-sky-900/70" style="object-position: 50% 50%">
+    </article>
+</section>
