--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,24 +5,25 @@ interface Props {
 
 import '@fontsource-variable/onest';
 const { title } = Astro.props;
-//import Header from '../components/Header.astro';
+import Header from '../components/Header.astro';
 import { ViewTransitions } from 'astro:transitions';
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es" class="scroll-smooth">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/logo.webp" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<script src="https://kit.fontawesome.com/67714e5665.js" crossorigin="anonymous"></script>
 		<ViewTransitions />
 	</head>
 	<body class="min-h-screen pb-32">
 		<div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"><div class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#C9EBFF,transparent)]"></div></div>
-		<!-- <Header /> -->
+		<Header />
 		<main class="max-w-5xl px-4 m-auto">
 			<slot />
 		</main>
@@ -31,7 +32,6 @@ import { ViewTransitions } from 'astro:transitions';
 <style is:global>
 	html {
 		font-family: 'Onest Variable' system-ui, sans-serif;
-		background: #13151a;
 		background-size: 224px;
 		color-scheme: dark light;
 	}
