--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import About from '../components/About.astro'
+import Skills from '../components/Skills.astro'
 ---
 
 <Layout title="Welcome to Astro.">
+	<Skills/>
 	<About />
 </Layout>
 
