skills update, distribución en pantalla

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,27 +17,27 @@ import LinkedInIcon from './icons/LinkedIn.astro';
      <nav id="navegacion" class="fixed bottom-0 left-0 w-full shadow-sm bg-secondary text-tertiary py-3 z-50  md:top-0 md:bottom-auto ">
         <div class="container mx-auto max-w-4xl md:w-3/4 flex justify-between items-center px-8 md:px-0 md:space-x-4">
           <ButtonNav href="#">
-            <HomeIcon class="size-4 md:size-5"/> 
+            <HomeIcon class="size-5"/> 
             <span class="hidden md:inline">Inicio</span>
           </ButtonNav>
 
           <ButtonNav href="#experiencia">
-            <ExperienceIcon class="size-4 md:size-5"/> 
+            <ExperienceIcon class="size-5"/> 
             <span class="hidden md:inline">Experiencia</span>
           </ButtonNav>
 
           <ButtonNav href="#proyectos">
-            <ProjectIcon class="size-4 md:size-5"/> 
+            <ProjectIcon class="size-5"/> 
             <span class="hidden md:inline">Proyectos</span>
           </ButtonNav>
 
           <ButtonNav href="#sobre-mi">
-            <AboutMeIcon class="size-4 md:size-5"/> 
+            <AboutMeIcon class="size-5"/> 
             <span class="hidden md:inline">Sobre mí</span>
           </ButtonNav>
 
           <ButtonNav href="#estudios">
-            <EducationIcon class="size-4 md:size-5"/> 
+            <EducationIcon class="size-5"/> 
             <span class="hidden md:inline">Estudios</span>
           </ButtonNav>
         </div>
