--- a/src/components/SocialButton.astro
+++ b/src/components/SocialButton.astro
@@ -4,6 +4,6 @@
   rel="noopener noreferrer"
   class="text-xs md:text-sm inline-flex items-center justify-center gap-2 px-4 py-1 md:py-2
    text-tertiary bg-white/15 border border-gray-900 rounded-full shadow-md hover:bg-transparent 
-   hover:text-white/80 ease-in-out duration-700 cursor-pointer mb-2">
+   hover:text-secondary ease-in-out duration-500 cursor-pointer mb-2">
   <slot />
 </a>
