add tags meta - seo

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,17 @@ import { ViewTransitions } from 'astro:transitions';
 		<link rel="icon" type="image/svg+xml" href="/logo.webp" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-		<script src="https://kit.fontawesome.com/67714e5665.js" crossorigin="anonymous"></script>
+		<meta name="description" content="¡Hola! Soy Ronaldo Jiménez, un Backend Developer apasionado por la creación de soluciones tecnológicas. Descubre mi experiencia laboral, educación y más.">
+		<meta name="keywords" content="Ronaldo Jiménez, Backend Developer, Desarrollador web, Experiencia laboral, Educación, Portfolio, jimcostdev">
+		<meta name="author" content="Ronaldo Jiménez">
+		<meta property="og:title" content="JimcostDev by Ronaldo Jiménez | Backend Developer">
+		<meta property="og:description" content="¡Hola! Soy Ronaldo Jiménez, un Backend Developer apasionado por la creación de soluciones tecnológicas. Descubre mi experiencia laboral, educación y más.">
+		<meta property="og:image" content="https://user-images.githubusercontent.com/53100460/254561844-6471bed7-ba32-4d66-b05f-007da9a95620.jpg">
+		<meta property="og:url" content="https://www.jimcostdev.com/img/perfil.png">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="JimcostDev by Ronaldo Jiménez | Backend Developer">
+		<meta name="twitter:description" content="¡Hola! Soy Ronaldo Jiménez, un Backend Developer apasionado por la creación de soluciones tecnológicas. Descubre mi experiencia laboral, educación y más.">
+		<meta name="twitter:image" content="https://user-images.githubusercontent.com/53100460/254561844-6471bed7-ba32-4d66-b05f-007da9a95620.jpg">
 		<ViewTransitions />
 	</head>
 	<body class="min-h-screen pb-32">
