--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import About from '../components/About.astro'
 import Skills from '../components/Skills.astro'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="JimcostDev by Ronaldo Jiménez | Software Developer">
 	<Skills/>
 	<About />
 </Layout>
