--- a/src/components/icons/Python.astro
+++ b/src/components/icons/Python.astro
@@ -1,33 +1,23 @@
 <svg
 {...Astro.props}
+  width="2500"
+  height="2490"
+  viewBox="0 0 256 255"
   xmlns="http://www.w3.org/2000/svg"
-  fill="none"
-  viewBox="0 0 64 64"
-  ><path
-    fill="url(#a)"
-    d="M31.885 16c-8.124 0-7.617 3.523-7.617 3.523l.01 3.65h7.752v1.095H21.197S16 23.678 16 31.876c0 8.196 4.537 7.906 4.537 7.906h2.708v-3.804s-.146-4.537 4.465-4.537h7.688s4.32.07 4.32-4.175v-7.019S40.374 16 31.885 16zm-4.275 2.454a1.394 1.394 0 1 1 0 2.79 1.393 1.393 0 0 1-1.395-1.395c0-.771.624-1.395 1.395-1.395z"
-  ></path><path
-    fill="url(#b)"
-    d="M32.115 47.833c8.124 0 7.617-3.523 7.617-3.523l-.01-3.65H31.97v-1.095h10.832S48 40.155 48 31.958c0-8.197-4.537-7.906-4.537-7.906h-2.708v3.803s.146 4.537-4.465 4.537h-7.688s-4.32-.07-4.32 4.175v7.019s-.656 4.247 7.833 4.247zm4.275-2.454a1.393 1.393 0 0 1-1.395-1.395 1.394 1.394 0 1 1 1.395 1.395z"
-  ></path><defs
-    ><linearGradient
-      id="a"
-      x1="19.075"
-      x2="34.898"
-      y1="18.782"
-      y2="34.658"
-      gradientUnits="userSpaceOnUse"
-      ><stop stop-color="#387EB8"></stop><stop offset="1" stop-color="#366994"
-      ></stop></linearGradient
-    ><linearGradient
-      id="b"
-      x1="28.809"
-      x2="45.803"
-      y1="28.882"
-      y2="45.163"
-      gradientUnits="userSpaceOnUse"
-      ><stop stop-color="#FFE052"></stop><stop offset="1" stop-color="#FFC331"
-      ></stop></linearGradient
+  preserveAspectRatio="xMinYMin meet"
+  ><defs
+    ><linearGradient x1="12.959%" y1="12.039%" x2="79.639%" y2="78.201%" id="a"
+      ><stop stop-color="#387EB8" offset="0%"></stop><stop
+        stop-color="#366994"
+        offset="100%"></stop></linearGradient
+    ><linearGradient x1="19.128%" y1="20.579%" x2="90.742%" y2="88.429%" id="b"
+      ><stop stop-color="#FFE052" offset="0%"></stop><stop
+        stop-color="#FFC331"
+        offset="100%"></stop></linearGradient
     ></defs
-  ></svg
+  ><path
+    d="M126.916.072c-64.832 0-60.784 28.115-60.784 28.115l.072 29.128h61.868v8.745H41.631S.145 61.355.145 126.77c0 65.417 36.21 63.097 36.21 63.097h21.61v-30.356s-1.165-36.21 35.632-36.21h61.362s34.475.557 34.475-33.319V33.97S194.67.072 126.916.072zM92.802 19.66a11.12 11.12 0 0 1 11.13 11.13 11.12 11.12 0 0 1-11.13 11.13 11.12 11.12 0 0 1-11.13-11.13 11.12 11.12 0 0 1 11.13-11.13z"
+    fill="url(#a)"></path><path
+    d="M128.757 254.126c64.832 0 60.784-28.115 60.784-28.115l-.072-29.127H127.6v-8.745h86.441s41.486 4.705 41.486-60.712c0-65.416-36.21-63.096-36.21-63.096h-21.61v30.355s1.165 36.21-35.632 36.21h-61.362s-34.475-.557-34.475 33.32v56.013s-5.235 33.897 62.518 33.897zm34.114-19.586a11.12 11.12 0 0 1-11.13-11.13 11.12 11.12 0 0 1 11.13-11.131 11.12 11.12 0 0 1 11.13 11.13 11.12 11.12 0 0 1-11.13 11.13z"
+    fill="url(#b)"></path></svg
 >
