corrección de btn en stack de proyectos y quito pb-32 de body

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ import { ViewTransitions } from 'astro:transitions';
 		<meta name="twitter:image" content="https://user-images.githubusercontent.com/53100460/254561844-6471bed7-ba32-4d66-b05f-007da9a95620.jpg">
 		<ViewTransitions />
 	</head>
-	<body class="min-h-screen pb-32">
+	<body class="min-h-screen">
 		<div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"><div class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_500px_at_50%_200px,#C9EBFF,transparent)]"></div></div>
 		<Header />
 		<main class="max-w-5xl px-4 m-auto">
