--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -19,14 +19,14 @@ const getProjects = Array.isArray(projectData) ? projectData : [projectData];
   </div>
 
   <div class="w-full md:w-1/2 md:max-w-lg">
-    <h3 class="text-2xl font-bold text-gray-800 dark:text-gray-100">
+    <h3 class="text-2xl font-semibold text-gray-800 dark:text-gray-100">
       {title}
     </h3>
     <div class="flex flex-wrap mt-2">
-      <ul class="flex flex-row mb-2 gap-x-2">
+      <ul class="flex flex-row flex-wrap mb-2 gap-x-2">
           {stack.map((tech: string) => (
             <li>
-              <span class="flex gap-x-2 rounded-full text-xs bg-sky-200/60 text-gray-800 py-1 px-2">
+              <span class="flex my-1 gap-x-2 rounded-full text-xs bg-sky-200/60 text-gray-800 py-1 px-2">
                 # {tech}
               </span>
             </li>
