--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import MailIcon from './icons/Mail.astro';
 ---
 
 <footer class="bg-BACKGROUND_MOBILE md:bg-BACKGROUND_DESKTOP bg-cover text-tertiary py-6 pb-20">
-    <div class="footer-content text-center ">
+    <div class="footer-content text-center">
       <div class="logo mb-4">
         <img src="/logo.svg" width="128" height="128" alt="jimcostdev logo" class="mx-auto">
       </div>
@@ -20,7 +20,7 @@ import MailIcon from './icons/Mail.astro';
       </div>
 
       <!-- Redes sociales -->
-      <div class="mb-2 text-xl lg:text-2xl">
+      <div class="mb-2">
         <SocialButton href="https://www.linkedin.com/in/ronaldo-jimenez">
           <LinkedInIcon class="size-4"/>
            LinkedIn
