--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -3,7 +3,7 @@
   target="_blank"
   rel="noopener noreferrer"
   class="text-xs md:text-sm inline-flex items-center justify-center gap-2 px-4 py-1
-   text-sky-600 bg-white/15 border border-sky-600 rounded-full shadow-md hover:bg-sky-200/40 
+   text-sky-600 bg-white/15 border border-sky-600 rounded-full shadow-md hover:hover:bg-sky-300/10
    hover:text-gray-800 ease-in-out duration-500 cursor-pointer my-2">
   <slot />
 </a>
