--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,10 +7,10 @@ import YoutubeIcon from './icons/YouTube.astro';
 import MailIcon from './icons/Mail.astro';
 ---
 
-<footer class="bg-BACKGROUND_MOBILE md:bg-BACKGROUND_DESKTOP bg-cover text-tertiary py-6 pb-20">
+<footer class="text-tertiary py-6 pb-20">
     <div class="footer-content text-center">
       <div class="logo mb-4">
-        <img src="/logo.svg" width="128" height="128" alt="jimcostdev logo" class="mx-auto">
+        <img src="/logo.svg" width="128" height="128" alt="jimcostdev logo" class="mx-auto opacity-80">
       </div>
       <div class="quote mb-4 px-4">
         <p class="text-base italic">"Ponte un blanco alto y haz fervientes esfuerzos por alcanzarlo y no te desanimes" EGW</p>
