--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import Principal from '../components/Principal.astro'
 import Skills from '../components/Skills.astro'
 import Experience from '../components/Experience.astro'
 import Projects from '../components/Projects.astro'
@@ -11,6 +12,10 @@ import Title from "../components/TitleSection.astro"
 ---
 
 <Layout title="JimcostDev by Ronaldo Jiménez | Software Developer">
+	<SectionContainer id="principal">
+		<Principal/>
+	</SectionContainer>
+
 	<SectionContainer id="skills">
 		<Title>Skills</Title>
 		<Skills/>
