--- a/src/components/Education.astro
+++ b/src/components/Education.astro
@@ -11,7 +11,7 @@ const getCertifications = Array.isArray(certificationsData) ? certificationsData
 ---
 
 <div class="flex justify-center mb-5">
-  <div class="bg-white rounded-lg shadow-md p-4 flex items-center">
+  <div class="bg-secondary rounded-lg shadow-md p-4 flex items-center">
     <div class="flex items-center mr-4">
       <div class="w-3 h-3 bg-yellow-300 rounded-full mr-2"></div>
       <span class="text-primary font-semibold">Grado</span>
