--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,16 +7,16 @@ import YoutubeIcon from './icons/YouTube.astro';
 import MailIcon from './icons/Mail.astro';
 ---
 
-<footer class="text-tertiary py-6 pb-20">
+<footer class="text-tertiary pb-16">
     <div class="footer-content text-center">
       <div class="logo mb-4">
-        <img src="/logo.svg" width="128" height="128" alt="jimcostdev logo" class="mx-auto opacity-80">
+        <img src="/logo.svg" width="128" height="128" alt="jimcostdev logo" class="mx-auto opacity-85">
       </div>
       <div class="quote mb-4 px-4">
         <p class="text-base italic">"Ponte un blanco alto y haz fervientes esfuerzos por alcanzarlo y no te desanimes" EGW</p>
       </div>
       <div class="footer-bottom">
-        <p class="text-sm mb-4">Hecho con 🤍 - © Ronaldo Jiménez {currentYear}</p>
+        <p class="text-sm mb-4">Hecho con 💙 - © Ronaldo Jiménez {currentYear}</p>
       </div>
 
       <!-- Redes sociales -->
