--- a/src/components/PillSkill.astro
+++ b/src/components/PillSkill.astro
@@ -1,5 +1,5 @@
 <div class="w-1/2 md:w-1/3 lg:w-1/4 p-2 flex flex-col items-center hover:scale-110 duration-300">
-    <div class="bg-white rounded-full p-4 flex items-center justify-center shadow-md">
+    <div class="bg-secondary hover:bg-sky-300/10 rounded-full p-4 flex items-center justify-center shadow-md hover:shadow-lg">
         <slot name="icon" />
     </div>
     <p class="text-center font-extralight text-sm mt-2">
