--- a/src/components/Principal.astro
+++ b/src/components/Principal.astro
@@ -6,7 +6,7 @@ import GitHubIcon from './icons/GitHub.astro';
 import LinkedInIcon from './icons/LinkedIn.astro';
 import DocumentIcon from './icons/Doc.astro';
 ---
-<div id="presentacion" class="pt-16 md:pt-24 px-0 relative">
+<div id="presentacion" class="pt-9 md:pt-18 px-0 relative">
         <div id="img-usuario" class="mb-4 relative mx-auto size-64 md:size-72">
           <img src="/dev.webp" class="w-full h-full object-cover rounded-full" alt="Ronaldo Jiménez">
         </div>
@@ -15,7 +15,7 @@ import DocumentIcon from './icons/Doc.astro';
           HOLA, SOY <span class="text-primary">RONALDO JIMÉNEZ</span>
         </h1>
         
-        <div class="flex flex-col items-center justify-between mt-1 px-8 text-center">
+        <div class="flex flex-col items-center justify-between mt-1 text-center">
           <h3 class="text-lg md:text-2xl font-semibold mb-2">SOFTWARE DEVELOPER</h3>
           <!-- Redes sociales -->
           <div class="mb-2">
