--- a/src/components/SocialButton.astro
+++ b/src/components/SocialButton.astro
@@ -3,7 +3,7 @@
   target="_blank"
   rel="noopener noreferrer"
   class="text-xs md:text-sm inline-flex items-center justify-center gap-2 px-4 py-1 md:py-2
-   text-tertiary bg-transparent  border border-gray-900 hover:border-sky-600  rounded-full shadow-md hover:bg-sky-300/10
-   hover:text-primary ease-in-out duration-500 cursor-pointer mb-2">
+  text-tertiary bg-transparent  border border-gray-900 hover:border-sky-600  rounded-full shadow-md 
+  hover:shadow-xl hover:bg-sky-300/10 hover:text-primary ease-in-out duration-500 cursor-pointer mb-2">
   <slot />
 </a>
