actualización en botones de redes sociales, personalización del bg y border

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,22 +21,22 @@ import MailIcon from './icons/Mail.astro';
 
       <!-- Redes sociales -->
       <div class="mb-2">
-        <SocialButton href="https://www.linkedin.com/in/ronaldo-jimenez">
+        <SocialButton href="https://www.linkedin.com/in/ronaldo-jimenez" bgColor="hover:bg-blue-300/10" borderColor="border-blue-300">
           <LinkedInIcon class="size-4"/>
            LinkedIn
         </SocialButton>
 
-        <SocialButton href="https://github.com/JimcostDev">
+        <SocialButton href="https://github.com/JimcostDev" bgColor="hover:bg-gray-400/10" borderColor="border-gray-400">
           <GitHubIcon class="size-4"/> 
           GitHub
         </SocialButton>
 
-        <SocialButton href="https://www.youtube.com/@jimcostdev">
+        <SocialButton href="https://www.youtube.com/@jimcostdev" bgColor="hover:bg-red-300/10" borderColor="border-red-300">
           <YoutubeIcon class="size-4"/> 
           YouTube
         </SocialButton>
 
-        <SocialButton href="mailto:jimcostdev@gmail.com">
+        <SocialButton href="mailto:jimcostdev@gmail.com" bgColor="hover:bg-yellow-300/10" borderColor="border-yellow-400">
           <MailIcon class="size-4"/>
           Contáctame
         </SocialButton>
