--- a/src/components/Principal.astro
+++ b/src/components/Principal.astro
@@ -19,27 +19,27 @@ import DocumentIcon from './icons/Doc.astro';
           <h3 class="text-lg md:text-2xl font-semibold mb-2">SOFTWARE DEVELOPER</h3>
           <!-- Redes sociales -->
           <div class="mb-2">
-            <SocialButton href="https://www.linkedin.com/in/ronaldo-jimenez">
+            <SocialButton href="https://www.linkedin.com/in/ronaldo-jimenez" bgColor="hover:bg-blue-300/10" borderColor="border-blue-300">
               <LinkedInIcon class="size-4"/>
                LinkedIn
             </SocialButton>
 
-            <SocialButton href="https://github.com/JimcostDev">
+            <SocialButton href="https://github.com/JimcostDev" bgColor="hover:bg-gray-400/10" borderColor="border-gray-400">
               <GitHubIcon class="size-4"/> 
               GitHub
             </SocialButton>
 
-            <SocialButton href="https://www.youtube.com/@jimcostdev">
+            <SocialButton href="https://www.youtube.com/@jimcostdev" bgColor="hover:bg-red-300/10" borderColor="border-red-300">
               <YoutubeIcon class="size-4"/> 
               YouTube
             </SocialButton>
 
-            <SocialButton href="mailto:jimcostdev@gmail.com">
+            <SocialButton href="mailto:jimcostdev@gmail.com" bgColor="hover:bg-yellow-300/10" borderColor="border-yellow-400">
               <MailIcon class="size-4"/>
               Contáctame
             </SocialButton>
 
-            <SocialButton href="https://cv.jimcostdev.com/">
+            <SocialButton href="https://cv.jimcostdev.com/" bgColor="hover:bg-green-300/10" borderColor="border-green-300">
               <DocumentIcon class="size-4"/>
               Descargar CV
             </SocialButton>
