--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,17 +18,17 @@ import { ViewTransitions } from 'astro:transitions';
 		<link rel="icon" type="image/svg+xml" href="/logo.webp" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-		<meta name="description" content="¡Hola! Soy Ronaldo Jiménez, un Backend Developer apasionado por la creación de soluciones tecnológicas. Descubre mi experiencia laboral, educación y más.">
+		<meta name="description" content="Hola 👋🏻 soy Ronaldo Jiménez, Ingeniero informático con experiencia en desarrollo de software. Poseo habilidades sólidas en desarrollo web utilizando Python y JavaScript. Destaco por mi capacidad para enseñar y servir como mentor, experiencia que he puesto en práctica como docente y tutor de programación. Además, estoy certificado como: Associate Developer por MongoDB y en Azure Fundamentals por Microsoft.">
 		<meta name="keywords" content="Ronaldo Jiménez, Web Developer, Desarrollador web, jimcostdev, Python">
 		<meta name="author" content="Ronaldo Jiménez">
-		<meta property="og:title" content="JimcostDev by Ronaldo Jiménez | Backend Developer">
-		<meta property="og:description" content="¡Hola! Soy Ronaldo Jiménez, un Backend Developer apasionado por la creación de soluciones tecnológicas. Descubre mi experiencia laboral, educación y más.">
-		<meta property="og:image" content="https://user-images.githubusercontent.com/53100460/254561844-6471bed7-ba32-4d66-b05f-007da9a95620.jpg">
-		<meta property="og:url" content="https://www.jimcostdev.com/img/perfil.png">
+		<meta property="og:title" content="JimcostDev by Ronaldo Jiménez | Software Developer">
+		<meta property="og:description" content="Hola 👋🏻 soy Ronaldo Jiménez, Ingeniero informático con experiencia en desarrollo de software. Poseo habilidades sólidas en desarrollo web utilizando Python y JavaScript. Destaco por mi capacidad para enseñar y servir como mentor, experiencia que he puesto en práctica como docente y tutor de programación. Además, estoy certificado como: Associate Developer por MongoDB y en Azure Fundamentals por Microsoft.">
+		<meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/jimcostdev-firebase.appspot.com/o/contacto.webp?alt=media&token=f8d75f0d-7533-4d07-b440-876839a47852">
+		<meta property="og:url" content="https://www.jimcostdev.com">
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="JimcostDev by Ronaldo Jiménez | Backend Developer">
-		<meta name="twitter:description" content="¡Hola! Soy Ronaldo Jiménez, un Backend Developer apasionado por la creación de soluciones tecnológicas. Descubre mi experiencia laboral, educación y más.">
-		<meta name="twitter:image" content="https://user-images.githubusercontent.com/53100460/254561844-6471bed7-ba32-4d66-b05f-007da9a95620.jpg">
+		<meta name="twitter:title" content="JimcostDev by Ronaldo Jiménez | Software Developer">
+		<meta name="twitter:description" content="Hola 👋🏻 soy Ronaldo Jiménez, Ingeniero informático con experiencia en desarrollo de software. Poseo habilidades sólidas en desarrollo web utilizando Python y JavaScript. Destaco por mi capacidad para enseñar y servir como mentor, experiencia que he puesto en práctica como docente y tutor de programación. Además, estoy certificado como: Associate Developer por MongoDB y en Azure Fundamentals por Microsoft.">
+		<meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/jimcostdev-firebase.appspot.com/o/contacto.webp?alt=media&token=f8d75f0d-7533-4d07-b440-876839a47852">
 		<ViewTransitions />
 	</head>
 	<body class="absolute inset-0 -z-10 h-full w-full bg-secondary bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px]">
