--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Title from "../components/TitleSection.astro"
 	
 	<SectionContainer id="experiencia">
 		<Title>Experiencia</Title>
-		<Experience />
+		<Experience server:defer/>
 	</SectionContainer>
 	
 	<SectionContainer id="proyectos">
