--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Title from "../components/TitleSection.astro"
 	
 	<SectionContainer id="proyectos">
 		<Title>Proyectos</Title>
-		<Projects />
+		<Projects server:defer/>
 	</SectionContainer>
 
 	<SectionContainer id="sobre-mi">
