cambio en la estructura de visualización, skills abajo, add go

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -3,7 +3,7 @@ import PythonIcon from './icons/Python.astro';
 import TailwindIcon from './icons/Tailwind.astro';
 import AstroIcon from './icons/Ast.astro';
 import FastAPIIcon from './icons/FastAPI.astro';
-import ReactIcon from './icons/React.astro';
+import GoIcon from './icons/Go.astro';
 import MongoDDIcon from './icons/MongoDB.astro';
 import MSSQLIcon from './icons/MSSQL.astro';
 import JSIcon from './icons/JS.astro';
@@ -14,30 +14,42 @@ import Skill from './PillSkill.astro';
             <PythonIcon class="size-5 md:size-8" slot="icon" />
             <span slot="text">Python</span>
         </Skill>
+
         <Skill>
             <JSIcon class="size-5 md:size-8" slot="icon" />
             <span slot="text">JavaScript</span>
         </Skill>
+
+        <Skill>
+            <GoIcon class="size-5 md:size-8" slot="icon" />
+            <span slot="text">Go</span>
+        </Skill>
+
         <Skill>
             <FastAPIIcon class="size-5 md:size-8" slot="icon" />
             <span slot="text">FastAPI</span>
         </Skill>
+
         <Skill>
             <TailwindIcon class="size-5 md:size-8" slot="icon" />
             <span slot="text">Tailwind</span>
         </Skill>
+
         <Skill>
             <AstroIcon class="size-5 md:size-8" slot="icon" />
             <span slot="text">Astro</span>
         </Skill>
-        <Skill>
+
+        <!-- <Skill>
             <ReactIcon class="size-5 md:size-8" slot="icon" />
             <span slot="text">React</span>  
-        </Skill>
+        </Skill> -->
+
         <Skill>
             <MongoDDIcon class="size-5 md:size-8" slot="icon" />
             <span slot="text">MongoDB</span>
         </Skill>
+
         <Skill>
             <MSSQLIcon class="size-5 md:size-8" slot="icon" />
             <span slot="text">SQL Server</span>
