--- a/src/components/Principal.astro
+++ b/src/components/Principal.astro
@@ -16,7 +16,7 @@ import DocumentIcon from './icons/Doc.astro';
         </h1>
         
         <div class="flex flex-col items-center justify-between mt-1 text-center">
-          <h3 class="text-lg md:text-2xl font-semibold mb-2">SOFTWARE DEVELOPER</h3>
+          <h3 class="text-lg md:text-2xl font-semibold mb-2">SOFTWARE ENGINEER</h3>
           <!-- Redes sociales -->
           <div class="mb-2">
             <SocialButton href="https://www.linkedin.com/in/ronaldo-jimenez" bgColor="hover:bg-blue-300/10" borderColor="border-blue-300">
