update esrudios y perfil

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Title from "../components/TitleSection.astro"
 
 ---
 
-<Layout title="JimcostDev by Ronaldo Jiménez | Software Developer">
+<Layout title="JimcostDev by Ronaldo Jiménez | Software Engineer">
 	<SectionContainer id="principal">
 		<Principal/>
 	</SectionContainer>
@@ -38,7 +38,7 @@ import Title from "../components/TitleSection.astro"
 
 	<SectionContainer id="estudios">
 		<Title>Estudios</Title>
-		<Education />	
+		<Education server:defer/>	
 	</SectionContainer>
 
 </Layout>
