--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -8,6 +8,10 @@ import MongoDDIcon from './icons/MongoDB.astro';
 import MSSQLIcon from './icons/MSSQL.astro';
 import JSIcon from './icons/JS.astro';
 import Skill from './PillSkill.astro';
+import ReactIcon from './icons/React.astro';
+import PostgresIcon from './icons/Postgres.astro';
+import DjangoIcon from './icons/Django.astro';
+import GitIcon from './icons/Git.astro';
 ---
     <div class="flex flex-wrap justify-around">
         <Skill>
@@ -31,6 +35,11 @@ import Skill from './PillSkill.astro';
         </Skill>
 
         <Skill>
+            <DjangoIcon class="size-5 md:size-8" slot="icon" />
+            <span slot="text">Django</span>
+        </Skill>
+
+        <Skill>
             <TailwindIcon class="size-5 md:size-8" slot="icon" />
             <span slot="text">Tailwind</span>
         </Skill>
@@ -40,10 +49,10 @@ import Skill from './PillSkill.astro';
             <span slot="text">Astro</span>
         </Skill>
 
-        <!-- <Skill>
+        <Skill>
             <ReactIcon class="size-5 md:size-8" slot="icon" />
             <span slot="text">React</span>  
-        </Skill> -->
+        </Skill>
 
         <Skill>
             <MongoDDIcon class="size-5 md:size-8" slot="icon" />
@@ -53,6 +62,16 @@ import Skill from './PillSkill.astro';
         <Skill>
             <MSSQLIcon class="size-5 md:size-8" slot="icon" />
             <span slot="text">SQL Server</span>
+        </Skill>
+
+        <Skill>
+            <PostgresIcon class="size-5 md:size-8" slot="icon" />
+            <span slot="text">PostgreSQL</span>
+        </Skill>
+
+        <Skill>
+            <GitIcon class="size-5 md:size-8" slot="icon" />
+            <span slot="text">Git</span>
         </Skill>
     </div>
 
