--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -13,7 +13,7 @@ const getProjects = Array.isArray(projectData) ? projectData : [projectData];
     getProjects.map(({ image, title, description, stack, link }) => (
     <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
   <div class="w-full md:w-1/2">
-    <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
+    <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-200 lg:hover:border-gray-300 lg:hover:bg-gray-400/50">
       <img alt={title} class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105" loading="lazy" src={image} />
     </div>
   </div>
@@ -33,8 +33,8 @@ const getProjects = Array.isArray(projectData) ? projectData : [projectData];
           ))}
         </ul>
 
-      <div class="mt-2 text-gray-700 dark:text-gray-400">{description}</div>
-      <footer class="flex items-end justify-start mt-4 gap-x-4">
+      <div class="text-gray-700 dark:text-gray-400">{description}</div>
+      <footer class="flex items-end justify-start gap-x-4">
           {link && (
             <LinkButton href={link}>
               <Link class="size-4" />
