--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import ButtonNav from './ButtonNav.astro';
      <!-- Barra de navegación fija en la parte inferior para móvil, en la parte superior para escritorio -->
      <nav id="navegacion" class="fixed bottom-0 left-0 w-full shadow-sm bg-secondary text-tertiary py-3 z-50  md:top-0 md:bottom-auto ">
         <div class="container mx-auto max-w-4xl md:w-3/4 flex justify-between items-center px-8 md:px-0 md:space-x-4">
-          <ButtonNav href="/#">
+          <ButtonNav href="/#principal">
             <HomeIcon class="size-5"/> 
             <span class="hidden md:inline">Inicio</span>
           </ButtonNav>
