add skill and ?sub=1 para YT

--- a/src/components/Principal.astro
+++ b/src/components/Principal.astro
@@ -29,7 +29,7 @@ import DocumentIcon from './icons/Doc.astro';
               GitHub
             </SocialButton>
 
-            <SocialButton href="https://www.youtube.com/@jimcostdev" bgColor="hover:bg-red-300/10" borderColor="border-red-300">
+            <SocialButton href="https://www.youtube.com/@jimcostdev?sub_confirmation=1" bgColor="hover:bg-red-300/10" borderColor="border-red-300">
               <YoutubeIcon class="size-4"/> 
               YouTube
             </SocialButton>
