--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,7 +31,7 @@ import MailIcon from './icons/Mail.astro';
           GitHub
         </SocialButton>
 
-        <SocialButton href="https://www.youtube.com/@jimcostdev" bgColor="hover:bg-red-300/10" borderColor="border-red-300">
+        <SocialButton href="https://www.youtube.com/@jimcostdev?sub_confirmation=1" bgColor="hover:bg-red-300/10" borderColor="border-red-300">
           <YoutubeIcon class="size-4"/> 
           YouTube
         </SocialButton>
